syntax = "proto3";
package user;
option java_package = "com.ferza17.ecommercemicroservicesv2.v1.user";

import "google/protobuf/descriptor.proto";
import "v1/user/enum.proto";

extend google.protobuf.MethodOptions {
  optional user.MethodAccessControl acl = 50002;
}

message MethodAccessControl {
  bool is_public = 1;
  repeated user.EnumRole roles = 2;
  user.HTTP http = 3;
  optional user.Broker broker = 5;
}

message HTTP {
  string url = 1;
  string method = 2;
}

message Broker {
  string event_type = 1;
}